--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-opencv-python==4.5.3.56
-torch==1.8.0
-torchvision==0.9.0
+opencv-python
+torch
+torchvision
 natsort
+pytorchvideo
+scipy
+pandas
+matplotlib
+seaborn
+requests
